[package]
name = "concurrent_broadcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
futures-util = "0.3.30"
tokio = { version = "1", features = ["macros", "rt", "time", "rt-multi-thread"] }
